--- a/src/components/MapIndicatorModal/styles.module.css
+++ b/src/components/MapIndicatorModal/styles.module.css
@@ -31,6 +31,7 @@
   animation-fill-mode: forwards;
   animation-timing-function: ease;
   display: block;
+  container-type:inline;
 }
 
 @keyframes popup {
@@ -89,4 +90,147 @@
 .description {
   font-size: 14px;
   line-height: 1.5em;
+  color:#000;
+}
+
+@container (width <990px){
+  .mapIndicatorModal.selected {
+    width: 16em;
+    background-color: whitesmoke;
+    border-radius: 0.5em;
+    border: 1px solid lightgray;
+    filter: drop-shadow(0.25em 0.5em 10px #666666);
+    z-index: 3;
+    animation-name: popup;
+    animation-duration: 200ms;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease;
+    display: block;
+   
+  }
+  .mapIndicatorModal::after {
+    content: '';
+    height: 2em;
+    width: 2em;
+    position: absolute;
+    bottom: -1.07em;
+    left:20  em;
+    
+    background-color: whitesmoke;
+    transform: rotate(45deg);
+    border-bottom-right-radius: 3px;
+    border-bottom: 1px solid lightgrey;
+    border-right: 1px solid lightgrey;
+    z-index: -1;
+  }
+
+.carouselWrapper {
+  overflow: hidden;
+  width: 100%;
+  height: 30%;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+}
+
+.carouselImageWrapper {
+  height: 6em;
+}
+
+.carouselImageWrapper img {
+  width: auto;
+}
+
+.textWrapper {
+  padding: 1em;
+}
+
+.title {
+  margin: 0.75em 0;
+  font-weight: 800;
+  font-size:12px;
+}
+
+.address {
+  font-size: 10px;
+  color: gray;
+  margin: 1em 0;
+  display: block;
+  line-height: 1.1em;
+}
+
+.description {
+  font-size: 10px;
+  line-height: 1.5em;
+}
+}
+
+@container (width <568px){
+  .mapIndicatorModal.selected {
+    width: auto; 
+    background-color: whitesmoke;
+    border-radius: 0.5em;
+    border: 1px solid lightgray;
+    filter: drop-shadow(0.25em 0.5em 10px #666666);
+    z-index: 3;
+    animation-name: popup;
+    animation-duration: 200ms;
+    animation-fill-mode: forwards;
+    animation-timing-function: ease;
+    display: block;
+    
+   
+  }
+  .mapIndicatorModal::after {
+    content: '';
+    height: 2em;
+    width: 2em;
+    position: absolute;
+    bottom: -1.07em;
+    left: 8em;
+    background-color: whitesmoke;
+    transform: rotate(45deg);
+    border-bottom-right-radius: 3px;
+    border-bottom: 1px solid lightgrey;
+    border-right: 1px solid lightgrey;
+    z-index: -1;
+  }
+
+.carouselWrapper {
+  overflow: hidden;
+  width: 100%;
+  height: 30%;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+  display:none;
+}
+
+.carouselImageWrapper {
+  height: 10em;
+}
+
+.carouselImageWrapper img {
+  width: auto;
+}
+
+.textWrapper {
+  padding: 1em;
+}
+
+.title {
+  margin: 0.75em 0;
+  font-weight: 800;
+}
+
+.address {
+  font-size: 12px;
+  color: gray;
+  margin: 1em 0;
+  display: block;
+  line-height: 1.1em;
+}
+
+.description {
+  font-size: 10px;
+  line-height: 1.5em;
+}
 }
