--- a/src/components/MapController/styles.module.css
+++ b/src/components/MapController/styles.module.css
@@ -1,7 +1,24 @@
 .mapWrapper {
   grid-column: 2 / span 3;
-  margin-top: 1em;
-  aspect-ratio: 16 / 9;
-
+  aspect-ratio: 1 / 1;
   background-color: darkgray;
+  container-type: inline;
+}
+
+@container (max-width: 990px) {
+  .mapWrapper {
+    grid-column: 1 / span 4;
+    aspect-ratio: 1 / 1;
+    
+  }
+}
+
+@container (max-width: 425px) {
+  .mapWrapper {
+    grid-column: 1 / span 4;
+    aspect-ratio: 1 / 2;
+    max-height:100%;
+
+    
+  }
 }
