--- a/src/components/MenuItem/styles.module.css
+++ b/src/components/MenuItem/styles.module.css
@@ -2,38 +2,74 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding: 0.5em 1.5em;
+  padding: 0.5em 3em;
   cursor: pointer;
   overflow: hidden;
-  transition: all 200ms
+  transition: all 200ms;
+  container-type: inline;
+  max-width: 100vw;
 }
 
 .menuItem:hover {
   background-color: whitesmoke;
+  color: black !important;
+  max-width: 100%;
 }
 
 .menuItem.selected {
   background-color: lightgray;
+  color: black !important;
 }
 
 .menuItem img {
   height: 1.5em;
   width: 1.5em;
+  border-radius: 20px;
 }
 
 .menuItem span {
   margin-left: 0.5em;
-  font-size: 0.8em;
-  white-space: nowrap;
-  overflow: hidden;
+  font-size: 0.6em;
 }
 
 .menuItem em {
-  font-weight: 600;
+  font-weight: 400;
   font-style: normal;
   text-overflow: clip;
 }
 
 .truncate {
   text-overflow: ellipsis;
+}
+
+@container (min-width< 990px) {
+  .menuItem {
+    display: flex;
+    overflow: visible;
+    text-overflow: unset;
+    justify-content: flex-left;
+    max-width: 100%;
+    background-color: transparent !important;
+  }
+  .menuItem em {
+    font-weight: 400;
+    font-style: normal;
+    text-overflow: unset;
+    width: 100%;
+  }
+  .menuItem span {
+    margin-left: 4em;
+    font-size: 0.6em;
+    overflow: visible;
+    justify-content: flex-start;
+    width: 100%;
+  }
+  .menuItem:active {
+    background-color: transparent !important;
+    max-width: 100vw;
+  }
+  .menuItem.selected {
+    background-color: transparent !important;
+    max-width: 100vw;
+  }
 }
