--- a/src/components/MobileMenu/styles.module.css
+++ b/src/components/MobileMenu/styles.module.css
@@ -1,34 +1,23 @@
 .menu {
   grid-column: 1 / span 1;
   overflow: hidden;
+  padding-top: 4em;
   container-type: inline-size;
-  padding-top:2em;
+  display: none;
 }
 
-.menu h1 {
-  font-size: 2em;
-  font-weight: 1000;
-  margin-bottom: 1em;
-  padding: 0.75em 0.75em 0;
 
-}
-
-.menu h2 {
-  font-size: 1.5em;
-  margin-bottom: 1em;
-  padding: 0 1em;
-}
-
-@container (width < 990px)
-  {.menu {
+@container (width <990px) {
+  .menu {
     grid-column: 1 / span 4;
     overflow: hidden;
+    max-width:100%;
     padding-top: 0em;
     overflow: visible;
     display: column;
     align-items: top;
     cursor: pointer;
-    display: none;
+    display: block;
     z-index:999;
     transition: height .4s ease;
     
@@ -37,19 +26,19 @@
 
 
   .listContainer{
-    padding-top:20px;
-    max-width:100%;
+    max-width:100vw;
     justify-content:flex-start;
     background:transparent;
-    margin:20px;
+    transition: height 0.3s ease;
+    padding-bottom:2em;
+    
   }
 
   .button{
-    background:transparent;
+   
     width:100%;
     border:none;
+    
   }
  
-
-
 }
