--- a/src/components/Dropdown/styles.module.css
+++ b/src/components/Dropdown/styles.module.css
@@ -1,48 +1,19 @@
-.dropdown{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    margin:10px;
-    background-color: transparent;
-    border:none;
-    
+.dropdown {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  border: none;
+  height: fit-content;
+  margin: 10px;
 }
 
-.select{
-    display: flex;
-    justify-content: space-between;
-
-}
-.content {
-    overflow: hidden;
-    max-height: 0;
-    font-weight: 100;
-    transition: max-height 0.5s ease-in-out;
-    padding:16px;
- 
-    width:80%;
+.expanded li {
+  max-height: 0px;
+  padding: 0 3em;
+  transition: all 50ms;
 }
 
-.collapsed{
-    .content {
-        display: flex;
-        margin: auto;
-        max-height: 500px;
-        white-space: break-spaces;
-      
-        font-weight: 100;
-
-    }
-}
-
-.expanded {
-    .content {
-        display: flex;
-        flex-direction: column;
-        max-height: 500px;
-        white-space: break-spaces;
-  
-        font-weight: 300;
-
-    }
+.dropdownActive li {
+  max-height: 100vh;
+  padding: 0.5em 3em;
 }
