--- a/src/components/MenuItem/styles.module.css
+++ b/src/components/MenuItem/styles.module.css
@@ -2,22 +2,24 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding: 0.5em 3em;
+  padding: 0.5em 1em;
   cursor: pointer;
   overflow: hidden;
   transition: all 200ms;
   container-type: inline;
   max-width: 100vw;
+  border-left-style: solid;
+  border-left-width: 3px;
+  background-color: rgba(30, 30, 30, 0.1);
 }
 
 .menuItem:hover {
-  background-color: whitesmoke;
-  color: black !important;
+  background-color: rgba(30, 30, 30, 0.2);
   max-width: 100%;
 }
 
 .menuItem.selected {
-  background-color: lightgray;
+  background-color: rgba(30, 30, 30, 0.2);
   color: black !important;
 }
 
