set overflow on root element

--- a/src/components/LogicController/styles.module.css
+++ b/src/components/LogicController/styles.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   container-type: inline-size;
+  overflow: hidden;
 }
 
 @container (width < 990px) {
