style cta link button

--- a/src/components/MapIndicatorModal/styles.module.css
+++ b/src/components/MapIndicatorModal/styles.module.css
@@ -110,6 +110,13 @@ button{
   color: #000;
 }
 
+.ctaLink {
+  border: none;
+  padding: 0.75em;
+  margin: 1em;
+  border-radius: 2px;
+}
+
 @container (width <990px) {
   .mapIndicatorModal.selected {
     width: 16em;
