--- a/src/components/MenuItem/styles.module.css
+++ b/src/components/MenuItem/styles.module.css
@@ -45,7 +45,7 @@
   text-overflow: ellipsis;
 }
 
-@container (min-width< 990px) {
+@container (min-width <= 990px) {
   .menuItem {
     display: flex;
     overflow: visible;
