--- a/src/components/MapIndicatorModal/styles.module.css
+++ b/src/components/MapIndicatorModal/styles.module.css
@@ -1,10 +1,8 @@
-.bottomContainer{
+.bottomContainer {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding:4px;
-  
-  
+  padding: 4px;
 }
 .mapIndicatorModal {
   position: absolute;
@@ -40,6 +38,10 @@
   animation-timing-function: ease;
   display: block;
   container-type: inline;
+}
+
+.textWrapper a {
+  color: inherit;
 }
 
 @keyframes popup {
