--- a/src/components/LogicController/styles.module.css
+++ b/src/components/LogicController/styles.module.css
@@ -1,4 +1,4 @@
-.wrapper {
+.appWrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   container-type: inline-size;
@@ -7,7 +7,7 @@
 }
 
 @container (width <= 990px) {
-  .wrapper {
+  .appWrapper {
     display: f;
     grid-template-columns: repeat(1, 1fr);
     max-height: 100%;
