--- a/src/components/Dropdown/styles.module.css
+++ b/src/components/Dropdown/styles.module.css
@@ -6,6 +6,15 @@
   height: fit-content;
   margin: 1em;
 }
+.dropdownHorizontal {
+  position: relative;
+  display: grid;
+  grid-template-columns:repeat (1fr 1fr);
+  border: none;
+  height: fit-content;
+  margin: 1em;
+ 
+}
 
 .dropdownHeader {
   display: flex;
@@ -15,6 +24,8 @@
   border-bottom-style: solid;
   cursor: pointer;
 }
+
+
 
 .items {
   display: grid;
