--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -2,6 +2,34 @@
   grid-column: 2 / span 1;
   container-type: inline-size;
 }
+.left{
+  grid-column: 2 / span 1;
+  container-type: inline-size;
+  direction:ltr;
+
+}
+.right {
+   grid-column: 2 / span 1;
+container-type: inline-size;
+}
+.none {
+display:none;
+}
+
+.top{
+  grid-column:1 / 4;
+  position:absolute;
+  top:0;
+  height:fit-content;
+  width:100%;
+}
+.bottom{
+  grid-column:1 / 4;
+  position:absolute;
+  bottom:0;
+  height:fit-content;
+  width:100%;
+}
 
 .menuIcon {
   margin: 10px;
