--- a/src/components/MenuItem/styles.module.css
+++ b/src/components/MenuItem/styles.module.css
@@ -9,7 +9,7 @@
   max-width: 100vw;
   border-left-style: solid;
   border-left-width: 3px;
-  background-color: rgba(30, 30, 30, 0.1);
+  margin-bottom:.5em;
   overflow-y: hidden;
   padding: 0.5em 1em;
 }
