--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -1,6 +1,8 @@
 .menu {
-  grid-column: 2 / span 1;
+  grid-column:  3/ span 1;
   container-type: inline-size;
+  width:100vw;
+  padding:1em;
 }
 .left{
   grid-column: 2 / span 1;
@@ -17,14 +19,46 @@ display:none;
 }
 
 .top{
-  grid-column:1 / 4;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr ;
   position:absolute;
   top:0;
   height:fit-content;
   width:100%;
+  
 }
+
+ul{
+  display: grid;
+  grid-template-columns:  1fr 1fr 1fr 1fr 1fr 1fr ;
+  height:fit-content;
+  width:auto;
+  justify-content:space-between;
+  
+}
+
+.right ul{
+  display: grid;
+  grid-template-columns:  1fr ;
+  height:fit-content;
+  width:fit-content;
+  justify-content:space-between;
+
+}
+
+.left ul{
+  display: grid;
+  grid-template-columns:  1fr ;
+  height:fit-content;
+  width:fit-content;
+  justify-content:space-between;
+
+}
+
+
 .bottom{
-  grid-column:1 / 4;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr ;
   position:absolute;
   bottom:0;
   height:fit-content;
