--- a/src/components/Menu/styles.module.css
+++ b/src/components/Menu/styles.module.css
@@ -5,13 +5,14 @@
   padding:1em;
 }
 .left{
-  grid-column: 2 / span 1;
+  grid-column: 3 / span 1;
   container-type: inline-size;
   direction:ltr;
+  
 
 }
 .right {
-   grid-column: 2 / span 1;
+   grid-column: 3 / span 1;
 container-type: inline-size;
 }
 .none {
@@ -109,7 +110,7 @@ ul{
     grid-column: 1 / span 4;
     overflow: hidden;
     padding-top: 0em;
-    overflow: visible;
+    
     display: column;
     align-items: top;
     justify-conter: center;
@@ -136,10 +137,7 @@ ul{
     width: 100%;
     border: none;
   }
-  .menu {
-    grid-column: 2 / span 1;
-    container-type: inline-size;
-  }
+ 
   .left{
     grid-column: 2 / span 1;
     container-type: inline-size;
@@ -150,5 +148,31 @@ ul{
      grid-column: 1
       / span 1;
   container-type: inline-size;
+
+  }
+  ul{
+    display: grid;
+    grid-template-columns:  1fr  ;
+    height:fit-content;
+    width:100%;
+    justify-content:space-between;
+    
+  }
+  .right ul{
+    display: grid;
+    grid-template-columns: 1fr ;
+    height:fit-content;
+    width:100%;
+    justify-content:space-between;
+  
+  }
+  
+  .left ul{
+    display: grid;
+    grid-template-columns:  1fr ;
+    height:fit-content;
+    width:fit-content;
+    justify-content:space-between;
+  
   }
 }
