--- a/src/components/LogicController/styles.module.css
+++ b/src/components/LogicController/styles.module.css
@@ -53,6 +53,12 @@ height: 100%;
     grid-template-columns: repeat(1, 1fr);
     max-height: 100%;
   }
+  .right {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    max-height: 100%;
+   
+  }
 
   .none {
     display: grid;
