--- a/src/components/LogicController/styles.module.css
+++ b/src/components/LogicController/styles.module.css
@@ -59,6 +59,12 @@ height: 100%;
     max-height: 100%;
    
   }
+  .left {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    max-height: 100%;
+   
+  }
 
   .none {
     display: grid;
